force-app/main/default/objects/Action_Plan_Template__c/fields/Action_Plan_Template_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template_Status__c</fullName>
    <label>Action Plan Template Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Action_Planner_Status</valueSetName>
    </valueSet>
</CustomField>