force-app/main/default/objects/Action_Plan_Template__c/fields/Action_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Type__c</fullName>
    <label>Action Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Industries</fullName>
                <isActive>false</isActive>
                <label>Industries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>