force-app/main/default/objects/Action_Plan_Template__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Version</label>
    <referenceTo>Action_Plan_Template_Version__c</referenceTo>
    <relationshipLabel>Action Plan Templates</relationshipLabel>
    <relationshipName>Action_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>