force-app/main/default/objects/Action_Plan_Template__c/fields/Is_Action_Plan_Template_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Action_Plan_Template_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Action Plan Template Editable</label>
    <type>Checkbox</type>
</CustomField>