force-app/main/default/objects/Action_Plan_Template__c/fields/IsAdHocItemCreationEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsAdHocItemCreationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Let users add items to action plans</label>
    <type>Checkbox</type>
</CustomField>