force-app/main/default/objects/Action_Plan_Template__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>SUBSTITUTE(TRIM(Name), &quot; &quot;, &quot;_&quot;)</formula>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>