force-app/main/default/objects/Action_Plan_Template__c/validationRules/Is_Action_Plan_Template_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Action_Plan_Template_Editable</fullName>
    <active>true</active>
    <description
  >Active template is not editable, Deactivate first.</description>
    <errorConditionFormula
  >NOT(Is_Action_Plan_Template_Editable__c)</errorConditionFormula>
    <errorMessage
  >Active template is not editable, Deactivate first.</errorMessage>
</ValidationRule>